# structural-typing-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.sqlx/: query-4971111a95e88a0f14bf951f7a9a51edbaf9930c7f0e6e970e19acef990b64e6.json  query-5abfb5ca7424914c4d85cc50df4d917b86279b539f0fc9330ad6637c92aa17fc.json  query-96fba7498125dda58a2598ef9a1b10bd20b7acbd1133dad6355e54525f5884a6.json  query-b251e1b434dfd6accff5518f083bbd56120adb41226522b872e67af76e442829.json  query-ffa87708818089363fcccc990655527893a04a9602cc4b929e1f19fbb814499f.json
examples/: 01_hello.rs  02_optional.rs  03_generics.rs  04_merge.rs  05_extract.rs  05_split.rs  06_try_extract.rs  06_try_split.rs  07_derives.rs  08_serde.rs  derives.rs  extract.rs  generic_impl.rs  hello.rs  merge.rs  nested.rs  optional.rs  serde.rs  try_extract.rs  user_fields.rs
examples/todos-api/: Cargo.toml  README.md
examples/todos-api/migrations/: 20251109014734_create_todos_table.sql  20251121000000_create_projects_and_todos.sql
examples/todos-api/src/: main.rs
src/: access.rs  auto_impl.rs  generics_helpers.rs  get.rs  has.rs  into_values.rs  lib.rs  merge.rs  name_based.rs  partial.rs  presence.rs  property.rs  record.rs  select.rs  set.rs  struct_based.rs  type_based.rs  type_id_based.rs
structural-typing/: Cargo.toml
structural-typing-macros/: Cargo.toml
structural-typing-macros/src/: analysis.rs  codegen.rs  derive.rs  lib.rs  parsing.rs
structural-typing-macros/src/codegen/: builders.rs  constructors.rs  extract.rs  fields_module.rs  generics_utils.rs  getters.rs  merge.rs  mod.rs  nested_setters.rs  projection.rs  serde_deserialize.rs  split.rs  struct_def.rs  type_subst.rs
structural-typing/examples/: 01_hello.rs  02_merge.rs  03_optional.rs  04_projection.rs  04_split.rs  05_serde.rs  06_type_algebra.rs  07_derives.rs  api_validation.rs  basic.rs  comprehensive.rs  field_projection.rs  merging_patterns.rs  methods.rs  orm_pattern.rs  raw_identifiers.rs  simple_test.rs  test_expand.rs  user_fields.rs
structural-typing/src/: access.rs  extract.rs  lib.rs  presence.rs  presence_convert.rs  serde.rs  split.rs
structural-typing/tests/: access_in_impls.rs  access_trait_issue.rs  always_present.rs  core_functionality.rs  cross_module_access.rs  derive_test.rs  edge_cases.rs  generic_access.rs  generic_edge_cases.rs  into_state_test.rs  macro_behavior.rs  nested_setters.rs  serde_edge_cases.rs  serde_integration.rs  serde_test.rs  type_safety.rs  update_test.rs
structural-typing/tests/ui/: access_absent_field_directly.rs  access_absent_field_directly.stderr  empty_struct_rejected.rs  empty_struct_rejected.stderr  enum_rejected.rs  enum_rejected.stderr  generic_struct_rejected.rs  generic_struct_rejected.stderr  greet_requires_name.rs  greet_requires_name.stderr  modify_duplicate.stderr  modify_invalid_operator.stderr  modify_invalid_operator_bang.rs  modify_invalid_operator_bang.stderr  modify_invalid_operator_star.rs  modify_invalid_operator_star.stderr  modify_missing_operator.rs  modify_missing_operator.stderr  modify_typo.rs  modify_typo.stderr  modify_typo_with_minus.rs  modify_typo_with_minus.stderr  modify_typo_with_plus.rs  modify_typo_with_plus.stderr  modify_typo_with_question.rs  modify_typo_with_question.stderr  nested_duplicate_rejected.rs  nested_duplicate_rejected.stderr  nested_empty_rejected.rs  nested_empty_rejected.stderr  nested_single_field_rejected.rs  nested_single_field_rejected.stderr  select_duplicate.stderr  select_empty.rs  select_empty.stderr  select_invalid_prefix.stderr  select_invalid_prefix_minus.rs  select_invalid_prefix_minus.stderr  select_invalid_prefix_plus.rs  select_invalid_prefix_plus.stderr  (+30 more)
tests/ui/: access_absent_field_directly.stderr  greet_requires_name.rs  greet_requires_name.stderr  type_mismatch_assignment.rs
