[workspace]
members = ["structural-typing", "structural-typing-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Crazytieguy/structural-typing-rs"

[workspace.dependencies]
structural-typing = { path = "structural-typing" }
structural-typing-macros = { path = "structural-typing-macros" }
