[package]
name = "structural-typing-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for structural-typing crate"
keywords = ["macros", "structural", "typing", "codegen", "builder"]
categories = ["rust-patterns", "development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
