[package]
name = "structural-typing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Type-level field presence tracking for Rust structs, inspired by TypeScript"
readme = "../README.md"
keywords = ["builder", "type-safety", "optional", "structural", "typing"]
categories = ["rust-patterns", "no-std", "development-tools"]

[dependencies]
derive-where = "1.6.0"
structural-typing-macros = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0.112"

[features]
serde = ["derive-where/serde"]
default = []

[[example]]
name = "05_serde"
required-features = ["serde"]
