[package]
name = "structural-typing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Type-level field presence tracking for Rust structs, inspired by TypeScript"
readme = "../README.md"
keywords = ["builder", "type-safety", "optional", "structural", "typing"]
categories = ["rust-patterns", "no-std", "development-tools"]

[dependencies]
derive-where = "1.6.0"
structural-typing-macros = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0.112"

[features]
serde = ["derive-where/serde"]
default = []

# Examples in ../examples/ (repo root)
[[example]]
name = "01_hello"
path = "../examples/01_hello.rs"

[[example]]
name = "02_optional"
path = "../examples/02_optional.rs"

[[example]]
name = "03_generics"
path = "../examples/03_generics.rs"

[[example]]
name = "04_merge"
path = "../examples/04_merge.rs"

[[example]]
name = "05_extract"
path = "../examples/05_extract.rs"

[[example]]
name = "06_try_extract"
path = "../examples/06_try_extract.rs"

[[example]]
name = "07_derives"
path = "../examples/07_derives.rs"

[[example]]
name = "08_serde"
path = "../examples/08_serde.rs"
required-features = ["serde"]
