[package]
name = "todos-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.6"
derive-where = "1.6.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
structural-typing = { path = "../../structural-typing", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
